added ping icon when user has unread announcements